# cuesheet-creator

./: .gitignore  CODE_REVIEW.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: final_cues.sample.json  merge_plan.sample.json  naming_overrides.sample.json
references/: dependency-setup.md  field-templates.md  review-checklist.md  spec.md
scripts/: _do_physical_split.py  _split_monolith.py  cuesheet_creator.py
scripts/cc/: __init__.py  constants.py  draft.py  env.py  merge.py  naming.py  normalize.py  scan.py  skeleton.py  split.py  template_mgmt.py  templates.py  utils.py  validation.py
scripts/cc/data/: __init__.py
scripts/cc/data/templates/: music-director.json  production.json
scripts/cc/exporters/: markdown.py  xlsx.py
templates/: gameplay-music.json  music-director.json  production.json  script.json
tests/: test_core.py  test_gameplay.py
